// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render NoExpense with dates filter message 1`] = `
<div
  className="no-expense"
>
  <img
    alt="A filter showing Expenses have been filtered"
    className="no-expense__illustration"
    height="608"
    src="SvgrURL"
    width="883"
  />
  <p>
    No results found 
     
    starting from Jan 1st, 1970
     
    ending at Jan 5th, 1970
  </p>
</div>
`;

exports[`should render NoExpense with empty message 1`] = `
<div
  className="no-expense"
>
  <img
    alt="A clipboard showing no data"
    className="no-expense__illustration"
    height="633"
    src="SvgrURL"
    width="648"
  />
  <p>
    No Expenses To Display.
     
    <Link
      className="router-link router-link--add"
      to="/create"
    >
      Add an Expense
    </Link>
  </p>
</div>
`;

exports[`should render NoExpense with endDate filter message 1`] = `
<div
  className="no-expense"
>
  <img
    alt="A filter showing Expenses have been filtered"
    className="no-expense__illustration"
    height="608"
    src="SvgrURL"
    width="883"
  />
  <p>
    No results found 
     
     
    ending at Jan 5th, 1970
  </p>
</div>
`;

exports[`should render NoExpense with startDate filter message 1`] = `
<div
  className="no-expense"
>
  <img
    alt="A filter showing Expenses have been filtered"
    className="no-expense__illustration"
    height="608"
    src="SvgrURL"
    width="883"
  />
  <p>
    No results found 
     
    starting from Jan 1st, 1970
     
  </p>
</div>
`;

exports[`should render NoExpense with text and date filters message 1`] = `
<div
  className="no-expense"
>
  <img
    alt="A filter showing Expenses have been filtered"
    className="no-expense__illustration"
    height="608"
    src="SvgrURL"
    width="883"
  />
  <p>
    No results found 
    for "bills"
     
    starting from Jan 1st, 1970
     
    ending at Jan 5th, 1970
  </p>
</div>
`;

exports[`should render NoExpense with text filter message 1`] = `
<div
  className="no-expense"
>
  <img
    alt="A filter showing Expenses have been filtered"
    className="no-expense__illustration"
    height="608"
    src="SvgrURL"
    width="883"
  />
  <p>
    No results found 
    for "bills"
     
     
  </p>
</div>
`;
